--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ theme:
     - navigation.top
 extra_css:
   - stylesheets/extra.css
-copyright: Copyright &copy; 2022 Stift LTDA
+copyright: Copyright &copy; 2025 Stift LTDA
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
@@ -27,6 +27,7 @@ nav:
   - index.md
   - users.md
   - groups.md
+  - bookings.md
   - disciplines.md
   - auth_integration.md
   - webhooks.md
